some styles fixed (overflow: hidden commented)

--- a/src/sass/layouts/_main-content.scss
+++ b/src/sass/layouts/_main-content.scss
@@ -25,3 +25,7 @@
     gap: 40px;
   }
 }
+
+.main-container {
+  padding-bottom: 40px;
+}
